# open-mail

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/plugins/: developer-guide.md
docs/start/: fase_2.md  fase_3.md  fase_4.md  fase_5.md  fase_6.md  fase_7.md  fase_8.md  fase_9.md
plugins/template/: README.md  plugin.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: errors.rs  events.rs  mod.rs  read_models.rs  repositories.rs  tasks.rs
src-tauri/src/domain/models/: account.rs  attachment.rs  config.rs  contact.rs  folder.rs  label.rs  message.rs  mod.rs  scheduled_send.rs  signature.rs  snooze.rs  sync_cursor.rs  thread.rs
src-tauri/src/infrastructure/: mod.rs
src-tauri/src/infrastructure/database/: mod.rs
src-tauri/src/infrastructure/database/migrations/: 002_sync_cursors.sql  003_sync_cursor_uids.sql  005_signatures.sql  006_app_config.sql  007_snoozed_threads.sql  008_scheduled_sends.sql
src-tauri/src/infrastructure/database/repositories/: account_repository.rs  config_repository.rs  folder_repository.rs  message_repository.rs  mod.rs  scheduled_send_repository.rs  signature_repository.rs  snooze_repository.rs  sync_cursor_repository.rs  thread_repository.rs
src-tauri/src/infrastructure/sync/: credential_store.rs  imap_client.rs  mod.rs  oauth.rs  smtp_client.rs  sync_manager.rs  types.rs
src-tauri/src/plugins/: host.rs  manifest.rs  mod.rs  wasm_runtime.rs
src/hooks/: useAppShellEvents.ts  useBackendHealth.ts  useDesktopNotifications.ts  useDomainEvents.ts  useFolderThreads.ts  useMailboxOverview.ts  useNetworkStatus.ts  useSearchThreads.ts  useSyncStatusDetail.ts  useTauriEvent.ts  useThreadMessages.ts  useThreads.ts  useUnifiedInboxThreads.ts  useUnreadBadge.ts  (+1 more)
(+164 files in other folders)
