[package]
name = "open-mail"
version = "0.1.0"
description = "Open Mail desktop client"
authors = ["Leco"]
edition = "2021"
default-run = "open-mail"

[lib]
name = "open_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = ["apple-native"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = "27"

[dev-dependencies]
wat = "1"
